# yahooooooo-browser

./: .cursor-config.json  .gitignore  CMakeLists.txt  README.md  build_plans.md  check_cef_build.sh
src/: README.md  app.cpp  app.h  app_other.cpp  app_other.h  app_other_minimal.cc  app_renderer.cpp  app_renderer.h  app_renderer_minimal.cc  browser_window.cpp  browser_window.h  client.cpp  client.h  client_mac.mm  handler_life.cpp  handler_life.h  handler_load.cpp  handler_load.h  handler_request.cpp  handler_request.h  helper_main.cpp  helper_main_minimal.cpp  mac_window.h  mac_window.mm  main.cpp  render_handler.h  tab_manager.cpp  tab_manager.h
src/mac/: Info.plist  helper-Info.plist
src/resources/: multiprocess_test.html  simple_test.html  test.html
